fix(inbound): invalid inbound connector definitions are not stored (#2504)
* fix(inbound): invalid definitions are not stored for user convenience

* fix polling connector test

* address review suggestions

* rewrite a condition that's impossible to read